<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.csahmad.moodcloud.AddOrEditPostActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/body"
        android:layout_centerHorizontal="true"
        android:text="Post"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_dark" />

    <EditText
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:scrollbars="horizontal"
        android:background="@android:color/background_light"
        android:hint="Say something:"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/delimage"
        android:visibility="invisible"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_action_name"
        android:layout_alignBottom="@+id/moodPhoto"
        android:layout_toEndOf="@+id/moodPhoto"
        android:background="@null"/>

    <ImageButton
        android:id="@+id/moodPhoto"
        android:layout_width="100dp"
        android:layout_height="99dp"
        android:src="@android:drawable/ic_menu_camera"
        android:scaleType="fitCenter"
        android:layout_below="@+id/body"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:layout_marginLeft="10dp"/>

    <ImageButton
        android:id="@+id/datebutton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_action_date"
        android:layout_below="@+id/body"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:scaleType="fitCenter"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/postDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datebutton"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/angry"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="Angry"
        android:layout_toEndOf="@+id/angry_image"

        android:layout_below="@+id/delimage"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/angry_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/delimage"
        android:layout_alignParentStart="true"
        android:src="@drawable/angry"
        android:layout_alignBottom="@+id/angry" />

    <TextView
        android:id="@+id/confused"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="Confused"
        android:layout_toEndOf="@+id/confused_image"

        android:layout_below="@+id/angry"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/confused_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/angry_image"
        android:layout_alignParentStart="true"
        android:src="@drawable/confused"
        android:layout_alignBottom="@+id/confused" />

    <TextView
        android:id="@+id/disgusted"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="Disgusted"
        android:layout_toEndOf="@+id/disgusted_image"

        android:layout_below="@+id/confused"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/disgusted_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/confused_image"
        android:layout_alignParentStart="true"
        android:src="@drawable/disgusted"
        android:layout_alignBottom="@+id/disgusted"/>

    <TextView
        android:id="@+id/scared"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="Scared"
        android:layout_toEndOf="@+id/scared_image"

        android:layout_below="@+id/disgusted"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/scared_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/disgusted_image"
        android:layout_alignParentStart="true"
        android:src="@drawable/fear"
        android:layout_alignBottom="@+id/scared"/>

    <TextView
        android:id="@+id/happy"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="Happy"
        android:layout_toEndOf="@+id/happy_image"

        android:layout_below="@+id/scared"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/happy_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/scared_image"
        android:layout_alignParentStart="true"
        android:src="@drawable/happy"
        android:layout_alignBottom="@+id/happy"/>

    <TextView
        android:id="@+id/sad"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="Sad"
        android:layout_toEndOf="@+id/sad_image"

        android:layout_below="@+id/happy"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/sad_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/happy_image"
        android:layout_alignParentStart="true"
        android:src="@drawable/sad"
        android:layout_alignBottom="@+id/sad"/>

    <TextView
        android:id="@+id/ashamed"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="Ashamed"
        android:layout_toEndOf="@+id/ashamed_image"

        android:layout_below="@+id/sad"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/ashamed_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/sad_image"
        android:layout_alignParentStart="true"
        android:src="@drawable/shame"
        android:layout_alignBottom="@+id/ashamed"/>

    <TextView
        android:id="@+id/surprised"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="Suprised"
        android:layout_toEndOf="@+id/surprised_image"

        android:layout_below="@+id/ashamed"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/surprised_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/ashamed_image"
        android:layout_alignParentStart="true"
        android:src="@drawable/suprised"
        android:layout_alignBottom="@+id/surprised"/>

    <EditText
        android:id="@+id/trigger"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_below="@+id/moodRadioGroup"
        android:layout_centerHorizontal="true"
        android:background="@android:color/background_light"
        android:hint="Trigger"/>

    <TextView
        android:id="@+id/alone"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:textSize="20sp"
        android:layout_below="@+id/trigger"
        android:layout_toEndOf="@+id/alone_image"
        android:text="Alone"/>

    <TextView
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:textSize="20sp"
        android:text="With a Group"
        android:layout_below="@+id/alone"
        android:layout_toEndOf="@+id/group_image"
        android:layout_alignEnd="@+id/crowd" />

    <TextView
        android:id="@+id/crowd"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:textSize="20sp"
        android:layout_below="@+id/group"
        android:layout_toEndOf="@+id/crowd_image"
        android:text="With a Crowd"/>

    <Button
        android:id="@+id/postButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="Post"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

    <RadioGroup
        android:id="@+id/statusRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/trigger"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:id="@+id/alone_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />
        <RadioButton
            android:id="@+id/group_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />
        <RadioButton
            android:id="@+id/crowd_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/moodRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/delimage"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:id="@+id/angry_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <RadioButton
            android:id="@+id/confused_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <RadioButton
            android:id="@+id/disgusted_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <RadioButton
            android:id="@+id/scared_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <RadioButton
            android:id="@+id/happy_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <RadioButton
            android:id="@+id/sad_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <RadioButton
            android:id="@+id/ashamed_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <RadioButton
            android:id="@+id/surprised_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />


    </RadioGroup>
    <ImageView
        android:id="@+id/alone_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/trigger"
        android:layout_alignParentStart="true"
        android:src="@drawable/alone"
        android:layout_alignBottom="@+id/alone"
        android:layout_alignEnd="@+id/group_image" />
    <ImageView
        android:id="@+id/group_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/alone"
        android:layout_alignParentStart="true"
        android:src="@drawable/group"
        android:layout_alignBottom="@+id/group"/>
    <ImageView
        android:id="@+id/crowd_image"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/group"
        android:layout_alignParentStart="true"
        android:src="@drawable/crowd"
        android:layout_alignBottom="@+id/crowd"/>





    <ImageButton
        android:id="@+id/backButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="48dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:tint="@android:color/background_light"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ImageButton
        android:id="@+id/mapButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/pin_unselected"
        android:background="@null"
        android:layout_toLeftOf="@+id/datebutton"
        android:layout_below="@+id/body"
        android:scaleType="fitCenter"
        android:onClick="onMapButtonClicked"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>


</RelativeLayout>