...
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/create"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="131dp"
        android:text="Create Account" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_dark"
        android:layout_above="@+id/username"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignStart="@+id/username"
        android:layout_marginBottom="48dp"
        android:text="Username:"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <EditText
...
