...
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        android:transitionGroup="false"
        app:title="Sign In"
        app:titleMarginStart="150dp" />
</RelativeLayout>

